[package]
name = "todomvc"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"
yew = { version = "0.14", features = ["std_web"] }
# yew = { version = "0.14", features = ["web-sys"] }